@@ -1,3 +1,14 @@
+2001-07-17  Alex Samuel  <samuel@codesourcery.com>
+
+	* qm/track/config.py (open_idb): Fix IDB check.  Improve
+	diagnostics.
+	* share/diagnostics/track.txt (idb directory missing): New
+	diagnostic. 
+	(idb problem): Likewise.
+	(idb path inaccessible): Likewise.
+	(idb path wrong): Likewise.
+	* share/dtml/track/summary-color-key.dtml: Adjust formatting.
+
 2001-07-16  Alex Samuel  <samuel@codesourcery.com>
 
 	* README: No longer require PyXML.
